--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 asgiref==3.8.1
 asttokens==2.2.1
-attrs==22.1.0
+attrs==24.2.0
 backcall==0.2.0
 colorama==0.4.6
 decorator==5.1.1
 Django==5.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 executing==1.2.0
+inflection==0.5.1
 iniconfig==1.1.1
 ipdb==0.13.9
 ipython==8.7.0
 jedi==0.18.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 matplotlib-inline==0.1.6
 packaging==22.0
 parso==0.8.3
@@ -29,6 +33,9 @@ pytest-django==4.5.2
 pytest-testdox==3.0.1
 python-dotenv==1.0.1
 pytz==2022.6
+PyYAML==6.0.2
+referencing==0.35.1
+rpds-py==0.20.0
 setuptools==72.1.0
 six==1.16.0
 sqlparse==0.4.3
@@ -36,4 +43,5 @@ stack-data==0.6.2
 toml==0.10.2
 traitlets==5.7.0
 tzdata==2024.1
+uritemplate==4.1.1
 wcwidth==0.2.5
