--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ asgiref==3.8.1
 asttokens==2.2.1
 attrs==24.2.0
 backcall==0.2.0
+Brotli==1.1.0
 colorama==0.4.6
 decorator==5.1.1
+dj-database-url==2.2.0
 Django==5.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 executing==1.2.0
+gunicorn==23.0.0
 inflection==0.5.1
 iniconfig==1.1.1
 ipdb==0.13.9
@@ -42,6 +45,8 @@ sqlparse==0.4.3
 stack-data==0.6.2
 toml==0.10.2
 traitlets==5.7.0
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 wcwidth==0.2.5
+whitenoise==6.7.0
